workspace-sf/force-app/main/default/objects/DadosConta__c/DadosConta__c.object-meta.xml
<CustomObject>
    <label>Contas</label>
    <nameField>
        <label>OP</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>