workspace-sf/force-app/main/default/objects/DadosConta__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dados Contas</relationshipLabel>
    <relationshipName>ContasAccount</relationshipName>
    <type>Lookup</type>
</CustomField>