workspace-sf/force-app/main/default/objects/DadosConta__c/fields/BairroPrestacaoServicos__c.field-meta.xml
<CustomField>
    <fullName>BairroPrestacaoServicos__c</fullName>
    <label>Bairro Prestação Serviços</label>
    <length>100</length>
    <type>Text</type>
</CustomField>