workspace-sf/force-app/main/default/objects/DadosConta__c/fields/CEPPrestacaoServicos__c.field-meta.xml
<CustomField>
    <fullName>CEPPrestacaoServicos__c</fullName>
    <label>CEP Prestação Serviços</label>
    <length>10</length>
    <type>Text</type>
</CustomField>