workspace-sf/force-app/main/default/objects/DadosConta__c/fields/CidadePrestacaoServicos__c.field-meta.xml
<CustomField>
    <fullName>CidadePrestacaoServicos__c</fullName>
    <label>Cidade Prestação Serviços</label>
    <length>100</length>
    <type>Text</type>
</CustomField>