workspace-sf/force-app/main/default/objects/DadosConta__c/fields/CodigoCNM__c.field-meta.xml
<CustomField>
    <fullName>CodigoCNM__c</fullName>
    <label>Código CNM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>