workspace-sf/force-app/main/default/objects/DadosConta__c/fields/CodigoMunicipio__c.field-meta.xml
<CustomField>
    <fullName>CodigoMunicipio__c</fullName>
    <label>Código do Município</label>
    <length>25</length>
    <type>Text</type>
</CustomField>