workspace-sf/force-app/main/default/objects/DadosConta__c/fields/CodigoServicoPrestado__c.field-meta.xml
<CustomField>
    <fullName>CodigoServicoPrestado__c</fullName>
    <label>Código do Serviço Prestado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>