workspace-sf/force-app/main/default/objects/DadosConta__c/fields/EnderecoPrestacaoServicos__c.field-meta.xml
<CustomField>
    <fullName>EnderecoPrestacaoServicos__c</fullName>
    <label>Endereço Prestação Serviços</label>
    <length>255</length>
    <type>Text</type>
</CustomField>