workspace-sf/force-app/main/default/objects/DadosConta__c/fields/EstadoPrestacaoServicos__c.field-meta.xml
<CustomField>
    <fullName>EstadoPrestacaoServicos__c</fullName>
    <label>Estado Prestacao Serviços</label>
    <length>2</length>
    <type>Text</type>
</CustomField>