workspace-sf/force-app/main/default/objects/DadosConta__c/fields/SubOP__c.field-meta.xml
<CustomField>
    <fullName>SubOP__c</fullName>
    <label>SUB OP</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>